--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 <head>
   <meta charset='utf-8' />
   <title>COVID-19 Testing Locations | Greensboro</title>
+  <style>
+    body {
+      margin: 0;
+    }
+    #map {
+      height: 100vh;
+      width: 100vw;
+    }
+  </style>
+  <script src="script.js" defer></script>
   <meta name='robots' content='noindex, nofollow'>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
   <link rel="stylesheet" media="all" href="//fonts.googleapis.com/css?family=Rubik:300,400,500,700">
@@ -507,14 +517,6 @@
   //       .addTo(map);
   //   }
   // </script>
-  <div id='map' style='width: 400px; height: 300px;'></div>
-  <script>
-  mapboxgl.accessToken = 'pk.eyJ1Ijoic3RhZmZmcm9tYWZyaWNhIiwiYSI6ImNrbWgyeTJsdTAzZjUydm52M3l4emF3MmcifQ.BS-ZYWk-adtPXplOydgJ0g';
-  var map = new mapboxgl.Map({
-  container: 'map',
-  style: 'mapbox://styles/mapbox/streets-v11'
-  });
-  </script>
 
 <!-- <div id='nba'>
   <div id='filters' class='filters'>
