--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
     <div class='heading'>
       <h1>COVID-19 Testing Locations</h1>
-      <div>Read more <a href="https://sf.gov/GetTestedSF">about getting tested in Greensboro</a></div>
+      <div>Read more <a href="https://www.nchealthcare.org/what-you-need-to-know-about-getting-a-covid-19-vaccine-in-north-carolina/?utm_source=google&utm_medium=cpc&utm_campaign=2021_ittakes&utm_content=vaccines1&gclid=Cj0KCQjwutaCBhDfARIsAJHWnHuLh_5qWgf1_UAzDFo1Q7PH1A_mnsayFuWi8kTryAimDo_zjJRF7OQaAvfDEALw_wcB">about getting tested in Greensboro</a></div>
     </div>
     <div id='listings-container'>
       <div id='filters' class='filters'>
