--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div> <img src="/images/CfGLogoWhite.png" alt=""></div>
     </div>
     <div class='heading'>
-      <h1>COVID-19 Testing Locations</h1>
+      <h1>COVID-19 Vaccine Locations</h1>
       <div>Read more <a href="https://www.nchealthcare.org/what-you-need-to-know-about-getting-a-covid-19-vaccine-in-north-carolina/?utm_source=google&utm_medium=cpc&utm_campaign=2021_ittakes&utm_content=vaccines1&gclid=Cj0KCQjwutaCBhDfARIsAJHWnHuLh_5qWgf1_UAzDFo1Q7PH1A_mnsayFuWi8kTryAimDo_zjJRF7OQaAvfDEALw_wcB">about getting tested in Greensboro</a></div>
     </div>
     <div id='listings-container'>
