--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset='utf-8' />
   <title>COVID-19 Testing Locations | Greensboro</title>
-  <style>
+  <!-- <style>
     body {
       margin: 0;
     }
@@ -12,7 +12,7 @@
       height: 100vh;
       width: 100vw;
     }
-  </style>
+  </style> -->
   <script src="script.js" defer></script>
   <meta name='robots' content='noindex, nofollow'>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
@@ -33,6 +33,11 @@
   <link rel="stylesheet" media="all" href="index.css" />
   <!-- Turf.js plugin -->
   <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
+  <link
+    rel="stylesheet"
+    href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.css"
+    type="text/css"
+  />
 
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
