--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 
 <head>
   <meta charset='utf-8' />
-  <title>COVID-19 Testing Locations | Greensboro</title>
-  <!-- <style>
-    body {
+  <title>COVID-19 Vaccine Locations | Greensboro</title>
+  <style>
+    /* body {
       margin: 0;
     }
     #map {
       height: 100vh;
       width: 100vw;
     }
-  </style> -->
+  </style> */
   <script src="script.js" defer></script>
   <meta name='robots' content='noindex, nofollow'>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
@@ -29,14 +29,15 @@
   <script src='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js'></script>
   <link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
   
+  
 
   <link rel="stylesheet" media="all" href="index.css" />
   <!-- Turf.js plugin -->
   <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
   <link
-    rel="stylesheet"
-    href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.css"
-    type="text/css"
+  rel="stylesheet"
+  href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.css"
+  type="text/css"
   />
 
   <!-- Google Tag Manager -->
